--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
+  <!-- <link rel="stylesheet" href="../node_modules/ngx-bar-rating/themes/br-stars-theme.css"/> -->
+
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
