--- a/src/pages/provider/allreview/allreview.html
+++ b/src/pages/provider/allreview/allreview.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content class="bg-light">
-    <ion-row class="details ">
+    <!-- <ion-row class="details ">
         <ion-col col-6>
             <button ion-button full class="btn">  <ion-icon name="md-star"></ion-icon> All Reviews <ion-icon name="ios-arrow-down-outline" class="ml-auto"></ion-icon></button>
         </ion-col>
@@ -13,48 +13,20 @@
         <ion-col col-6>
             <button ion-button full class="btn">  <ion-icon><img src="assets/imgs/list-icon.png"></ion-icon> Newest First  <ion-icon name="ios-arrow-down-outline" class="ml-auto"></ion-icon></button>
         </ion-col>
-    </ion-row>
+    </ion-row> -->
 
     <ion-list no-lines class="reviews">
+        <div *ngFor="let item of review">
         <ion-item>
             <div class="reviews-details">
                 <div class="review-img">
-                    <img src="assets/imgs/profile2.png">
+                    <img src="{{item?.imageURL}}">
                 </div>
-                <h2 class="text-ellipsis">Emol Williams <br><small class="text-green">4.0 <ion-icon name="star" class="text-green"></ion-icon></small></h2>
-                <p class="text-ellipsis">21<sup>st</sup> Jan' 18 </p>
+                <h2 class="text-ellipsis">{{item?.cutomerName}} <br><small class="text-green">{{item?.rating}} <ion-icon name="star" class="text-green"></ion-icon></small></h2>
+                <!-- <p class="text-ellipsis">21<sup>st</sup> Jan' 18 </p> -->
             </div>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+            <p>{{item?.review}}</p>
         </ion-item>
-        <ion-item>
-            <div class="reviews-details">
-                <div class="review-img">
-                    <img src="assets/imgs/profile3.png">
-                </div>
-                <h2 class="text-ellipsis">Emol Williams <br><small class="text-green">5.0 <ion-icon name="star" class="text-green"></ion-icon></small></h2>
-                <p class="text-ellipsis">21<sup>st</sup> Jan' 18 </p>
-            </div>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-        </ion-item>
-        <ion-item>
-            <div class="reviews-details">
-                <div class="review-img">
-                    <img src="assets/imgs/profile4.png">
-                </div>
-                <h2 class="text-ellipsis">Emili Smith <br><small class="text-green">5.0 <ion-icon name="star" class="text-green"></ion-icon></small></h2>
-                <p class="text-ellipsis">21<sup>st</sup> Jan' 18 </p>
-            </div>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-        </ion-item>
-        <ion-item>
-            <div class="reviews-details">
-                <div class="review-img">
-                    <img src="assets/imgs/profile5.png">
-                </div>
-                <h2 class="text-ellipsis">Emol Williams <br><small class="text-green">5.0 <ion-icon name="star" class="text-green"></ion-icon></small></h2>
-                <p class="text-ellipsis">21<sup>st</sup> Jan' 18 </p>
-            </div>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-        </ion-item>
+    </div>
     </ion-list>
 </ion-content>
