--- a/src/pages/provider/review/review.html
+++ b/src/pages/provider/review/review.html
@@ -7,15 +7,15 @@
 <ion-content class="bg-light">
     <div class="rating-box bg-thime">
         <h6 class="text-white" text-center>Your Current rating</h6>
-        <h2 class="text-white" text-center>3.5
+        <h2 class="text-white" text-center>{{total/length}}
             <ion-icon name="md-star"></ion-icon>
         </h2>
         <div class="rating">
-            <p class="text-white"><span class="text-1">5<ion-icon name="md-star"></ion-icon></span><span class="rate-bar"><span class="rating-status" style="width:20%;"></span></span><span class="text-2">12</span></p>
-            <p class="text-white"><span class="text-1">4<ion-icon name="md-star"></ion-icon></span><span class="rate-bar"><span class="rating-status" style="width:30%;"></span></span><span class="text-2">26</span></p>
-            <p class="text-white"><span class="text-1">3<ion-icon name="md-star"></ion-icon></span><span class="rate-bar"><span class="rating-status" style="width:50%;"></span></span><span class="text-2">51</span></p>
-            <p class="text-white"><span class="text-1">2<ion-icon name="md-star"></ion-icon></span><span class="rate-bar"><span class="rating-status" style="width:10%;"></span></span><span class="text-2">04</span></p>
-            <p class="text-white"><span class="text-1">1<ion-icon name="md-star"></ion-icon></span><span class="rate-bar"><span class="rating-status" style="width:15%;"></span></span><span class="text-2">05</span></p>
+            <p class="text-white"><span class="text-1">5<ion-icon name="md-star"></ion-icon></span><span class="rate-bar"><span class="rating-status" [style.width]="fPercent+'%' "></span></span><span class="text-2">{{fiveStar}}</span></p>
+            <p class="text-white"><span class="text-1">4<ion-icon name="md-star"></ion-icon></span><span class="rate-bar"><span class="rating-status" [style.width]="((fourStar/length)*100)+'%'"></span></span><span class="text-2">{{fourStar}}</span></p>
+            <p class="text-white"><span class="text-1">3<ion-icon name="md-star"></ion-icon></span><span class="rate-bar"><span class="rating-status" [style.width]="((threeStar/length)*100)+'%'"></span></span><span class="text-2">{{threeStar}}</span></p>
+            <p class="text-white"><span class="text-1">2<ion-icon name="md-star"></ion-icon></span><span class="rate-bar"><span class="rating-status" [style.width]="((twoStar/length)*100)+'%'"></span></span><span class="text-2">{{twoStar}}</span></p>
+            <p class="text-white"><span class="text-1">1<ion-icon name="md-star"></ion-icon></span><span class="rate-bar"><span class="rating-status" [style.width]="((oneStar/length)*100)+'%'"></span></span><span class="text-2">{{oneStar}}</span></p>
         </div>
         <div class="btn-container">
             <button class="btn text-thime" ion-button round full (click)="allreview()">Read all reviews</button>
@@ -42,7 +42,7 @@
 
     <ion-row class="details ">
         <ion-col col-6>
-            <button ion-button full class="btn"> <ion-icon name="md-star"></ion-icon><span>98 <small>People Reviewed</small></span></button>
+            <button ion-button full class="btn"> <ion-icon name="md-star"></ion-icon><span>{{length}} <small>People Reviewed</small></span></button>
         </ion-col>
 
         <ion-col col-6>
