--- a/src/pages/listofplumber/listofplumber.html
+++ b/src/pages/listofplumber/listofplumber.html
@@ -20,13 +20,13 @@
             <h2>
                 <span class="text-ellipsis">{{item.firstName}} </span>
                 <span class="text-light-grey small">&nbsp; | {{item.jobTitle}}</span>
-                <span class="ml-auto small text-green">4.1  <ion-icon name="md-star"></ion-icon> <small>(121)</small></span>
+                <span class="ml-auto small text-green">{{item.rating}}  <ion-icon name="md-star"></ion-icon> <small>({{item.total}})</small></span>
             </h2>
             <p class="text-grey">
                 <span class="text-ellipsis">
                     <img src="assets/imgs/ruppes-icon.png"> {{item.rate}} / per hover
                 </span>
-                <span class="ml-auto text-ellipsis">2.0 km away</span></p>
+                <!-- <span class="ml-auto text-ellipsis">2.0 km away</span></p> -->
         </ion-item>
     </div>
     </ion-list>
