--- a/src/pages/plumberprofile/plumberprofile.html
+++ b/src/pages/plumberprofile/plumberprofile.html
@@ -11,12 +11,12 @@
             <div class="profile-img">
                 <img src="{{worker?.imageURL}}">
             </div>
-            <p class="retaing text-green" text-right>3.5 <span class="text-light-grey"><ion-icon name="star" class="text-green"></ion-icon> (98)</span></p>
-            <h2 text-center><span text-ellipsis>Alex John</span> <span class="type"> | Plumber</span></h2>
+            <p class="retaing text-green" text-right>{{worker?.rating}} <span class="text-light-grey"><ion-icon name="star" class="text-green"></ion-icon> ({{worker?.total}})</span></p>
+            <h2 text-center><span text-ellipsis>{{worker?.firstName}}</span> <span class="type"> | {{worker?.jobTitle}}</span></h2>
 
             <ion-row>
                 <ion-col col-6>
-                    <h3 text-center><img src="assets/imgs/ruppes-icon.png">250</h3>
+                    <h3 text-center><img src="assets/imgs/ruppes-icon.png">{{worker?.rate}}</h3>
                     <p text-center>per hover</p>
                 </ion-col>
                 <ion-col col-6>
@@ -65,26 +65,18 @@
             </ion-list>
 
             <ion-list *ngSwitchCase="'reviews'" no-lines class="reviews">
+                <div *ngFor="let item of review">
                 <ion-item>
                     <div class="reviews-details">
                         <div class="review-img">
-                            <img src="assets/imgs/profile2.png">
+                            <img src="{{item.imageURL}}">
                         </div>
-                        <h2 class="text-ellipsis">Emol Williams <br><small class="text-green">4.0 <ion-icon name="star" class="text-green"></ion-icon></small></h2>
-                        <p class="text-ellipsis">21<sup>st</sup> Jan' 18 </p>
+                        <h2 class="text-ellipsis">{{item.cutomerName}} <br><small class="text-green">{{item.rating}}.0 <ion-icon name="star" class="text-green"></ion-icon></small></h2>
+                        <!-- <p class="text-ellipsis">21<sup>st</sup> Jan' 18 </p> -->
                     </div>
-                        <p></p>
+                        <p>{{item.review}}</p>
                 </ion-item>
-                <ion-item>
-                    <div class="reviews-details">
-                        <div class="review-img">
-                            <img src="assets/imgs/profile3.png">
-                        </div>
-                        <h2 class="text-ellipsis">Emol Williams <br><small class="text-green">5.0 <ion-icon name="star" class="text-green"></ion-icon></small></h2>
-                        <p class="text-ellipsis">21<sup>st</sup> Jan' 18 </p>
-                    </div>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry typesetting industry.</p>
-                </ion-item>
+            </div>
             </ion-list>
         </div>
     </div>
