--- a/src/pages/provider/tabs/tabs.html
+++ b/src/pages/provider/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs>
     <ion-tab [root]="tab1Root" tabTitle="Requests" tabIcon="md-calendar" tabsHideOnSubPages="true"></ion-tab>
-    <ion-tab [root]="tab2Root" tabTitle="Notifications" tabIcon="notifications" tabsHideOnSubPages="true"></ion-tab>
+    <!-- <ion-tab [root]="tab2Root" tabTitle="Notifications" tabIcon="notifications" tabsHideOnSubPages="true"></ion-tab> -->
     <ion-tab [root]="tab3Root" tabTitle="Review" tabIcon="md-apps" tabsHideOnSubPages="true"></ion-tab>
     <ion-tab [root]="tab4Root" tabTitle="Account" tabIcon="md-person" tabsHideOnSubPages="true"></ion-tab>
     <ion-tab [root]="tab5Root" tabTitle="Chats" tabIcon="md-chatboxes" tabsHideOnSubPages="true"></ion-tab>
