--- a/src/pages/chatscreen/chatscreen.html
+++ b/src/pages/chatscreen/chatscreen.html
@@ -1,28 +1,21 @@
-<ion-header>
+    <ion-header>
     <ion-navbar>
-        <ion-title><span class="profile"><img src="assets/imgs/profile2.png"></span>Aliza Smith <small> | Beauty</small><span> <ion-icon name="md-more"></ion-icon></span></ion-title>
+        <ion-title><span class="profile"><img src="{{image}}"></span>{{workerName}} <small></small><span> <ion-icon name="md-more"></ion-icon></span></ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content class="bg-light">
-    <!--    <img src="../../assets/imgs/12b.png">-->
+    <div *ngIf="chat">
+        <div *ngFor="let item of msgList">
+                <ion-card [class.send] = " userId === item.uid "
+                           [class.received] = " userId !==  item.uid "
+                >
+                        <h2>{{item.message}}</h2>
+                        <p class="small">{{item.time}}</p>
+                </ion-card>
+        </div>
 
-    <ion-card class="send">
-        <h2>Hey Aliza !!</h2>
-        <p>12:30 pm</p>
-    </ion-card>
-    <ion-card class="received">
-        <h2>Hey !!</h2>
-        <p>12:31pm</p>
-    </ion-card>
-    <ion-card class="send">
-        <h2>So are beautician ?</h2>
-        <p>12:32 pm</p>
-    </ion-card>
-    <ion-card class="received">
-        <h2>Yes,How may I help you ma,m?</h2>
-        <p>12:35pm</p>
-    </ion-card>
+    </div>
 
     <div class="fixed-bottom">
         <ion-row>
@@ -32,17 +25,13 @@
             <ion-col col-8>
                 <ion-list class="" no-lines>
                     <ion-item>
-                        <ion-input type="text" placeholder="Type your message"></ion-input>
-                        <h3 item-end>
-                            <ion-icon><img src="assets/imgs/add-icon.png"></ion-icon>
-                            <ion-icon name="md-mic"></ion-icon>
-                        </h3>
+                        <ion-input type="text" placeholder="Type your message" [(ngModel)]="newMsg" (keyup.enter)="sendMsg()" ></ion-input>
                     </ion-item>
                 </ion-list>
             </ion-col>
             <ion-col col-2 class="">
                 <p class="bg-thime" text-center>
-                    <ion-icon name="md-send"></ion-icon>
+                    <ion-icon name="md-send" (tap)="sendMsg()"></ion-icon>
                 </p>
             </ion-col>
         </ion-row>
