--- a/src/pages/provider/chatslist/chatslist.html
+++ b/src/pages/provider/chatslist/chatslist.html
@@ -6,51 +6,16 @@
 
 <ion-content class="bg-light">
     <ion-list no-lines>
-        <ion-item (click)="chatscreen()">
-            <ion-avatar item-start>
-                <img src="assets/imgs/profile1.png">
-            </ion-avatar>
-            <h2><span class="text-ellipsis">Aliza Smith </span>
-                <span class="ml-auto small">12:31pm</span>
-            </h2>
-            <p class="text-grey text-ellipsis">Yes, How may i help you?</p>
-        </ion-item>
-
-        <ion-item (click)="chatscreen()">
-            <ion-avatar item-start>
-                <img src="assets/imgs/profile2.png">
-            </ion-avatar>
-            <h2><span class="text-ellipsis">Alex John</span>
-                <span class="ml-auto small">31 min ago</span>
-            </h2>
-            <p class="text-grey text-ellipsis">Yes, How may i help you?</p>
-        </ion-item>
-        <ion-item (click)="chatscreen()">
-            <ion-avatar item-start>
-                <img src="assets/imgs/profile3.png">
-            </ion-avatar>
-            <h2><span class="text-ellipsis">Poul Wiliams</span>
-                <span class="ml-auto small">3 Hour ago</span>
-            </h2>
-            <p class="text-grey text-ellipsis">Okey done ! Will be there.</p>
-        </ion-item>
-        <ion-item (click)="chatscreen()">
-            <ion-avatar item-start>
-                <img src="assets/imgs/profile4.png">
-            </ion-avatar>
-            <h2><span class="text-ellipsis">Beena Smith </span>
-                <span class="ml-auto small">1 day ago</span>
-            </h2>
-            <p class="text-grey text-ellipsis">Fine its 2500 last.</p>
-        </ion-item>
-        <ion-item (click)="chatscreen()">
-            <ion-avatar item-start>
-                <img src="assets/imgs/profile5.png">
-            </ion-avatar>
-            <h2><span class="text-ellipsis">john Rodriks</span>
-                <span class="ml-auto small">12:31pm</span>
-            </h2>
-            <p class="text-grey text-ellipsis">We hope you are satisfied with our service</p>
-        </ion-item>
+            <div *ngFor="let item of chats; let i = index">
+                    <ion-item (click)="chatscreen(item)">
+                        <ion-avatar item-start>
+                            <img src="{{item.senderImage}}">
+                        </ion-avatar>
+                        <h2><span class="text-ellipsis">{{item.senderName}} </span>
+                            <span class="ml-auto small">{{item.messages[0].time}}</span>
+                        </h2>
+                        <p class="text-grey text-ellipsis">{{item.messages[length[i]].message}}</p>
+                    </ion-item>
+                </div>
     </ion-list>
 </ion-content>
