some new changes for post

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -37,4 +37,7 @@
             </ion-col>
         </ion-row>
     </div>
+    <ion-fab bottom right>
+            <button ion-fab (click)="newPost()" >Post</button>
+    </ion-fab>
 </ion-content>
