--- a/src/pages/provider/signup/signup.html
+++ b/src/pages/provider/signup/signup.html
@@ -55,7 +55,7 @@
                 <ion-input type="number" formControlName="rate" #rate></ion-input>
             </ion-item>
             <ion-item>
-                <ion-label class="text-grey" floating>You Location City</ion-label>
+                <ion-label class="text-grey" floating>Your Location City</ion-label>
                 <ion-input type="text" formControlName="city" #city></ion-input>
             </ion-item>
             <ion-item>
