--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,7 +18,7 @@
         <img src="assets/imgs/banner.jpg">
         <h1 class="text-white">How Can We Help You Today?</h1>
     </div>
-    <ion-searchbar (ionInput)="getItems($event)" placeholder="Search for service"></ion-searchbar>
+          <ion-auto-complete [dataProvider]="autoComplete"></ion-auto-complete>
     <ion-list>
         <ion-item *ngFor="let item of items">
             {{ item }}
