--- a/src/pages/startpage/start.html
+++ b/src/pages/startpage/start.html
@@ -17,40 +17,26 @@
     <p class="text-grey" text-center>Click Here to Continue</p>
 
     <div class="form">
-        <!-- <ion-list inset padding-bottom>
-            <ion-item>
-                <ion-avatar item-start style="margin-bottom: 3px; margin-right: 28px;">
-                    <ion-icon name="md-phone-portrait" class="text-thime"></ion-icon>
-                </ion-avatar>
-                <ion-label class="text-grey" floating>Mobile Number</ion-label>
-                <ion-input type="text" value="+91 903 335 7608"></ion-input>
-            </ion-item>
-        </ion-list>
-        <button class="btn" ion-button round full margin-top margin-bottom (click)="signup()">Continue</button> -->
+        
         <div class="social">
-            <!-- <p class="text-light-grey" text-center>Or Continue with</p> -->
 
             <ion-row>
                 <ion-col col-12>
                     <button class="btn text-thime" ion-button round full margin-top margin-bottom (click)="customer()">Continue</button>
                 </ion-col>
-                <!-- <ion-col col-6>
-                    <button class="btn google" ion-button round full margin-top margin-bottom>Google+</button>
-                </ion-col> -->
+
             </ion-row>
             <br><br><br><br>
-            <p class="text-light-grey" text-center>Are you a Service Provider?</p>
+        </div>
+        <p class="text-grey" text-center>Click Here to Continue</p>
+        <div class="social">
             <ion-row>
                 <ion-col col-12>
                     <button class="btn text-thime" ion-button round full margin-top margin-bottom (click)="worker()">Continue as a Provider</button>
                 </ion-col>
-                <!-- <ion-col col-6>
-                    <button class="btn google" ion-button round full margin-top margin-bottom>Google+</button>
-                </ion-col> -->
-            </ion-row>
-             
+            </ion-row>            
         </div>
-        <div class="fixed-bottom">
-        </div>
+            <div class="fixed-bottom">
+            </div>
     </div>
 </ion-content>
