--- a/src/pages/provider/jobs/jobs.html
+++ b/src/pages/provider/jobs/jobs.html
@@ -1,13 +1,14 @@
 <ion-header class="bg-thime">
     <ion-navbar>
-        <ion-title>Jobs <span><ion-icon name="md-search"></ion-icon></span></ion-title>
+        <ion-title>Jobs</ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content class="bg-light">
 
-        <ion-list no-lines>
-                <h2 class="heading">New Job Requests</h2>
+        <ion-list no-lines *ngIf="newPosts">
+                <h2 class="heading" *ngIf="newPosts.length !== 0">New Job Requests</h2>
+                <h2 class="heading" *ngIf="newPosts.length === 0">No New Job Requests</h2>
                 <div *ngFor="let item of newPosts">
                     <ion-item class="upcoming" (click)="JobDetails(item)">
                         <ion-avatar item-start>
@@ -18,5 +19,6 @@
                     </ion-item>
                 </div>
         </ion-list>
+
 
 </ion-content>
